[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://audio/breathing.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/386929__burghrecords__footsteps-indoor-soft.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.7

[sub_resource type="CylinderShape" id=2]
radius = 0.7

[node name="Player" type="KinematicBody"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.19323, 0 )
shape = SubResource( 1 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87829, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
current = true

[node name="SpotLight" type="SpotLight" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.702998, 0 )
spot_angle = 30.0

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04087, 0 )
shape = SubResource( 2 )

[node name="FootStep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Breathing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
